[package]
name = "advent-rust"
version = "0.1.0"
authors = ["Erin Schnabel <ebullient@redhat.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
itertools = "0.9"
petgraph = "0.5"
scoped_threadpool = "0.1.*"